# fuxi-quant

./: .gitignore  Cargo.toml  README.md
.github/actions/send-email/: action.yml
.github/workflows/: check.yml  ci.yml  release.yml
fuxi-quant/: Cargo.toml
fuxi-quant-agent/: Cargo.toml
fuxi-quant-agent/examples/: mcp_example.rs
fuxi-quant-agent/src/: agent.rs  lib.rs  mcp.rs  model.rs  qwen3.rs  tool.rs
fuxi-quant-app/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
fuxi-quant-app/config/: prompt.md
fuxi-quant-app/src/: App.vue  main.js  style.css
fuxi-quant-app/src-tauri/: Cargo.toml  tauri.conf.json
fuxi-quant-app/src-tauri/icons/: icon.icns
fuxi-quant-app/src-tauri/resources/: models.yaml
fuxi-quant-app/src-tauri/src/: agent.rs  lib.rs  main.rs
fuxi-quant-app/src/layouts/: AppLayout.vue
fuxi-quant-app/src/pages/: AgentPage.vue  SettingsPage.vue
fuxi-quant-app/src/router/: index.js
fuxi-quant-core/: Cargo.toml
fuxi-quant-core/src/: backtest.rs  helpers.rs  lib.rs  types.rs
fuxi-quant-runtime/: Cargo.toml
fuxi-quant-runtime/src/: builtin.rs  common.rs  lib.rs  runtime.rs  time.rs
fuxi-quant-runtime/src/pl/: data_type.rs  dataframe.rs  expr.rs  expr_dt.rs  expr_str.rs  full_null.rs  join_type.rs  lazyframe.rs  lazygroup.rs  mod.rs  series.rs
fuxi-quant/src/: lib.rs  log.rs  main.rs  types.rs
