[package]
name = "fuxi-quant-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { workspace = true, default-features = false, features = [
    "metal",
] }
