[package]
name = "fuxi-quant-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
name = "fuxi_quant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fuxi-quant-agent = { workspace = true }
